tried to fix button on iphone

--- a/style/mystyle.css
+++ b/style/mystyle.css
@@ -116,6 +116,8 @@ textarea {
 .b-div__btn_pos {
     position: absolute;
     align-self: flex-end;
+    -webkit-appearance: none;
+    -moz-appearance: none;
     width: auto;
     height: auto;
     right: 6rem;
